# nauva

./: .gitignore  .travis.yml  README.md  package.json  stack-ghcjs.yaml  stack.yaml  tsconfig.json
app/varna/catalog/: app-varna-catalog.cabal
app/varna/catalog/src/: Main.hs
app/varna/dev/: app-varna-dev.cabal
app/varna/dev/src/: Catalog.hs  Main.hs
app/varna/native/: app-varna-native.cabal
app/varna/native/src/: Catalog.hs  Main.hs
app/varna/shared/: app-varna-shared.cabal
app/varna/shared/src/App/Varna/: Catalog.hs  Shared.hs
app/varna/shared/src/App/Varna/Element/: Card.hs
docs/book/: components.md  getting-started.md  introduction.md  markup.md  styles.md  thunks.md
docs/book/getting-started/: source.md  views.md
docs/haddock/: Dockerfile  README.md  deploy.yaml  setup.yaml  stack.yaml
examples/playground/app/: nauva-example-playground-app.cabal
examples/playground/app/src/Nauva/Playground/: App.hs
examples/playground/native/: nauva-example-playground-native.cabal
examples/playground/native/src/: Main.hs
examples/playground/server/: nauva-example-playground-server.cabal
examples/playground/server/src/: Main.hs
pkg/hs/color/: color.cabal  stack.yaml
pkg/hs/color/src/Data/: Color.hs
pkg/hs/color/src/Data/Color/: Illuminant.hs
pkg/hs/color/src/Data/Color/Internal/: Conversion.hs  Types.hs
pkg/hs/color/test/: Test.hs
pkg/hs/nauva/: nauva.cabal
pkg/hs/nauva-catalog/: nauva-catalog.cabal
pkg/hs/nauva-catalog/src/Nauva/: Catalog.hs
pkg/hs/nauva-catalog/src/Nauva/Catalog/: Elements.hs  Shell.hs  TH.hs  Types.hs
pkg/hs/nauva-catalog/src/Nauva/Catalog/Specimens/: CodeSpecimen.hs  ColorGroupSpecimen.hs  NauvaSpecimen.hs  TypefaceSpecimen.hs
pkg/hs/nauva-catalog/src/Nauva/Catalog/Theme/: Color.hs  Typeface.hs
pkg/hs/nauva-cli/: README.md  nauva-cli.cabal  stack.yaml
pkg/hs/nauva-cli/src/: Main.hs
pkg/hs/nauva-css/: nauva-css.cabal
pkg/hs/nauva-css/src/Nauva/: CSS.hs
pkg/hs/nauva-css/src/Nauva/CSS/: Helpers.hs  Renderer.hs  Terms.Generator.hs  Terms.hs  Typeface.hs  Types.hs
pkg/hs/nauva-dev-server/: nauva-dev-server.cabal
pkg/hs/nauva-dev-server/public/: index.html  nauva-dev-server.css  nauva-dev-server.js  nauva-dev-server.ts
pkg/hs/nauva-dev-server/src/Nauva/: Server.hs
pkg/hs/nauva-dev-server/src/Nauva/Server/: Settings.hs
pkg/hs/nauva-native/: nauva-native.cabal
pkg/hs/nauva-native/jsbits/: bridge.ts  index.js  index.ts  rollup.config.js
pkg/hs/nauva-native/src/Nauva/: Client.hs
pkg/hs/nauva-native/src/Nauva/NJS/: Eval.hs
pkg/hs/nauva-native/src/Nauva/Native/: Bridge.hs
pkg/hs/nauva/src/Nauva/: App.hs  DOM.hs  Handle.hs  NJS.hs  Static.hs  View.hs
pkg/hs/nauva/src/Nauva/Internal/: Events.hs  Fragment.hs  Types.hs
pkg/hs/nauva/src/Nauva/NJS/: Language.hs  TH.hs
pkg/hs/nauva/src/Nauva/Service/: Head.hs  Router.hs
pkg/hs/nauva/src/Nauva/View/: Base.hs  CSS.hs  HTML.hs  Terms.Generator.hs  Terms.hs  Types.hs
pkg/hs/nauva/src/Nauva/View/CSS/: Helpers.hs  Internal.hs  Terms.Generator.hs  Terms.hs
pkg/hs/nauvad/: .gitignore  ghcid.cabal  nauvad.cabal  stack.yaml
pkg/hs/nauvad/public/: nauva-dev-server.css  nauva-dev-server.js  nauva-dev-server.ts  nauvad.js  rollup.config.js
pkg/hs/nauvad/src/: Ghcid.hs  Nauvad.hs  Session.hs  Settings.hs
pkg/hs/nauvad/src/Language/Haskell/Ghcid/: Types.hs
pkg/hs/portfinder/: portfinder.cabal  stack.yaml
pkg/hs/portfinder/src/Network/: PortFinder.hs
pkg/js/src/Nauva/: App.ts  CSS.ts
pkg/js/src/Nauva/React/: Head.ts  Input.ts
pkg/js/src/jsbits/nauva-native/: index.ts
pkg/js/src/jsbits/nauvad/: index.ts
product/nauva/book/dev/: Main.hs  nauva-product-nauva-book-dev.cabal  stack.yaml
product/nauva/book/native/: Main.hs  nauva-product-nauva-book-native.cabal  stack.yaml
product/nauva/book/static/: Main.hs  nauva-product-nauva-book-static.cabal  stack.yaml
product/nauva/catalog/dev/: Main.hs  nauva-product-nauva-catalog-dev.cabal
product/nauva/catalog/dev/src/: Main.hs
product/nauva/shared/: nauva-product-nauva-shared.cabal  stack.yaml
product/nauva/shared/src/Nauva/Product/Nauva/: Catalog.hs
product/nauva/shared/src/Nauva/Product/Nauva/Book/: App.hs
product/nauva/shared/src/Nauva/Product/Nauva/Element/: Message.hs  Terminal.hs
product/playground/app/dev/: Main.hs  nauva-product-playground-app-dev.cabal
product/playground/app/dev/src/: Main.hs
product/playground/app/native/: nauva-product-playground-app-native.cabal  stack.yaml
product/playground/app/native/src/: Main.hs
product/playground/shared/: nauva-product-playground-shared.cabal  stack.yaml
product/playground/shared/src/Nauva/Product/Playground/: Shared.hs
product/template/app/dev/: Main.hs  nauva-product-template-app-dev.cabal  stack.yaml
product/template/app/native/: Main.hs  nauva-product-template-app-native.cabal
product/template/catalog/dev/: Main.hs  nauva-product-template-catalog-dev.cabal  stack.yaml
product/template/catalog/native/: Main.hs  nauva-product-template-catalog-native.cabal
product/template/shared/: nauva-product-template-shared.cabal  stack.yaml
product/template/shared/src/Nauva/Product/Template/: App.hs  Catalog.hs
product/varna/app/dev/: nauva-product-varna-app-dev.cabal  stack.yaml
product/varna/app/dev/src/: Main.hs
product/varna/app/native/: nauva-product-varna-app-native.cabal  stack.yaml
product/varna/app/native/src/: Main.hs
product/varna/catalog/dev/: Main.hs  nauva-product-varna-catalog-dev.cabal  snapshot.json  stack.yaml
product/varna/catalog/dev/src/: Main.hs
product/varna/catalog/native/: nauva-product-varna-catalog-native.cabal  stack.yaml
product/varna/catalog/native/src/: Main.hs
product/varna/shared/: nauva-product-varna-shared.cabal  stack.yaml
product/varna/shared/src/Nauva/Product/Varna/: Catalog.hs  Routes.hs  Shared.hs
product/varna/shared/src/Nauva/Product/Varna/Element/: Card.hs
script/ci/: buildall  hlint  weeder
