name:                app-varna-catalog
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable app-varna-catalog
  default-language:    Haskell2010
  main-is:             src/Main.hs

  build-depends:
      base >= 4.7 && < 5
    , ghcjs-base
    , nauva
    , nauva-native
    , nauva-catalog
    , app-varna-shared
