name:                app-varna-dev
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10


executable app-varna-dev
  default-language:    Haskell2010
  main-is:             src/Main.hs

  ghc-options:         -Wall

  build-depends:
     base >= 4.7 && < 5
   , app-varna-shared
   , blaze-html
   , nauva-dev-server


executable app-varna-dev-catalog
  default-language:    Haskell2010
  main-is:             src/Catalog.hs

  ghc-options:         -Wall

  build-depends:
     base >= 4.7 && < 5
   , app-varna-shared
   , blaze-html
   , nauva-catalog
   , nauva-dev-server
