name:                app-varna-native
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10


executable app-varna-native
  default-language:    Haskell2010
  main-is:             src/Main.hs

  ghc-options:         -Wall

  build-depends:
      base >= 4.7 && < 5
    , ghcjs-base
    , nauva
    , nauva-native
    , app-varna-shared


executable app-varna-native-catalog
  default-language:    Haskell2010
  main-is:             src/Catalog.hs

  ghc-options:         -Wall

  build-depends:
      base >= 4.7 && < 5
    , ghcjs-base
    , nauva
    , nauva-native
    , nauva-catalog
    , app-varna-shared
