name:                app-varna-shared
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
     App.Varna.Shared
   , App.Varna.Catalog
   , App.Varna.Element.Card

  build-depends:
     base >= 4.7 && < 5
   , text
   , nauva
   , nauva-catalog
