name:                nauva-example-playground-app
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Nauva.Playground.App

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , text
   , containers
   , nauva
   , tagged
   , random
   , nauva
