name:                nauva-example-playground-native
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nauva-example-playground-native
  default-language:    Haskell2010
  main-is:             src/Main.hs

  build-depends:
      base >= 4.7 && < 5
    , aeson
    , bytestring
    , safe
    , text
    , mtl
    , stm
    , containers
    , blaze-markup
    , blaze-html
    , data-default
    , nauva
    , tagged
    , random
    , ghcjs-base
    , nauva-native
    , nauva-example-playground-app
