name:                nauva-example-playground-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nauva-example-playground-server
  default-language:    Haskell2010
  main-is:             src/Main.hs

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , bytestring
   , safe
   , text
   , mtl
   , stm
   , containers
   , blaze-markup
   , blaze-html
   , data-default
   , nauva
   , tagged
   , random
   , nauva-dev-server
   , nauva-example-playground-app
