name:                color
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall

  exposed-modules:
     Data.Color
   , Data.Color.Illuminant

  other-modules:
     Data.Color.Internal.Types
   , Data.Color.Internal.Conversion

  build-depends:
     base >= 4.7 && < 5
   , lens

test-suite spec
  hs-source-dirs:      test, src
  default-language:    Haskell2010

  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  build-depends:
     base
   , hspec
   , lens
