name:                color
version:             0.0.0

license:             MIT
license-file:        LICENSE

build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall

  exposed-modules:
     Data.Color
   , Data.Color.Illuminant
   , Data.Color.Internal.Types
   , Data.Color.Internal.Conversion

  build-depends:
     base >= 4.7 && < 5
   , lens

test-suite spec
  hs-source-dirs:      test
  default-language:    Haskell2010

  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  build-depends:
     base
   , color
   , hspec
   , lens
