name:                nauva-dev-server
version:             0.1.0

synopsis:            Nauva Development Server
description:         ...

homepage:            https://github.com/wereHamster/nauva

license:             MIT
license-file:        LICENSE

author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
copyright:           2016 Tomas Carnecky

category:            Web
build-type:          Simple

cabal-version:       >=1.10


flag release
  default: False
  description:
    Enable additional checks and compiler options for release builds.


source-repository head
  type:     git
  location: https://github.com/wereHamster/nauva


library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
  if flag(release)
    ghc-options:       -Wall -Werror

  exposed-modules:
     Nauva.Server

  other-modules:
     Nauva.Server.Settings

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , blaze-html
   , bytestring
   , data-default
   , directory
   , file-embed
   , filepath
   , nauva
   , snap-blaze
   , snap-core
   , snap-server
   , stm
   , template-haskell
   , text
   , websockets
   , websockets-snap
