name:                nauva
version:             0.1.0

synopsis:            It will. It will be good.
description:         React in Haskell.

homepage:            https://github.com/wereHamster/nauva

license:             MIT
license-file:        LICENSE

author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
copyright:           2016 Tomas Carnecky

category:            Web
build-type:          Simple

cabal-version:       >=1.10


flag release
  description: Enable additional checks and compiler options for release builds
  default: False


source-repository head
  type:     git
  location: https://github.com/wereHamster/nauva


library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-type-defaults
  if flag(release)
    ghc-options:       -Wall -Wno-type-defaults -Werror

  exposed-modules:
     Nauva.Handle
   , Nauva.Static
   , Nauva.NJS
   , Nauva.Internal.Types
   , Nauva.DOM
   , Nauva.Internal.Events
   , Nauva.Internal.Fragment
   , Nauva.View
   , Nauva.View.HTML
   , Nauva.View.Types
   , Nauva.View.Terms
   , Nauva.Service.Head
   , Nauva.Service.Router
   , Nauva.App

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , blaze-html
   , blaze-markup
   , bytestring
   , containers
   , mtl
   , nauva-css
   , siphash
   , stm
   , text
