cabal-version:      >= 1.18
build-type:         Simple
name:               nauvad
version:            0.6.6
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>, jpmoresmau
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2014-2017
synopsis:           GHCi based bare bones IDE
description:
    Either \"GHCi as a daemon\" or \"GHC + a bit of an IDE\". A very simple Haskell development tool which shows you the errors in your project and updates them whenever you save. Run @ghcid --topmost --command=ghci@, where @--topmost@ makes the window on top of all others (Windows only) and @--command@ is the command to start GHCi on your project (defaults to @ghci@ if you have a @.ghci@ file, or else to @cabal repl@).
homepage:           https://github.com/wereHamster/nauva#readme
bug-reports:        https://github.com/wereHamster/nauva/issues

source-repository head
    type:     git
    location: https://github.com/wereHamster/nauva.git

library
    hs-source-dirs:  src
    default-language: Haskell2010
    build-depends:
        base >= 4,
        filepath,
        time,
        text,
        aeson,
        directory,
        nauva,
        nauva-product-nauva-shared,
        extra >= 1.2,
        process >= 1.1,
        cmdargs >= 0.10

    exposed-modules:
        Language.Haskell.Ghcid
    other-modules:
        Language.Haskell.Ghcid.Types,
        Language.Haskell.Ghcid.Parser,
        Language.Haskell.Ghcid.Util

executable nauvad
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -main-is Nauvad.main -threaded
    main-is: Nauvad.hs
    build-depends:
        base == 4.*,
        filepath,
        time,
        directory,
        containers,
        fsnotify,
        extra >= 1.2,
        process >= 1.1,
        cmdargs >= 0.10,
        ansi-terminal,
        terminal-size >= 0.3,
        snap-core,
        snap-server,
        snap-blaze,
        bytestring,
        websockets,
        websockets-snap,
        blaze-html,
        aeson,
        text,
        stm,
        nauva,
        nauva-catalog,
        nauva-product-nauva-shared,
        process,
        portfinder,
        file-embed,
        template-haskell
    other-modules:
        Language.Haskell.Ghcid.Types
        Language.Haskell.Ghcid.Parser
        Language.Haskell.Ghcid.Util
        Language.Haskell.Ghcid
        Session
        Settings
        Wait
