name:                nauva-product-nauva-shared
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-type-defaults

  exposed-modules:
     Nauva.Product.Nauva.Catalog
   , Nauva.Product.Nauva.Element.Terminal
   , Nauva.Product.Nauva.Element.Message
   , Nauva.Product.Nauva.Book.App

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , text
   , nauva
   , nauva-catalog
