name:                nauva-product-template-shared
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-type-defaults

  exposed-modules:
     Nauva.Product.Template.App
     Nauva.Product.Template.Catalog

  build-depends:
     base >= 4.7 && < 5
   , template-haskell
   , nauva
   , nauva-catalog
