name:                nauva-product-varna-shared
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-type-defaults

  exposed-modules:
     Nauva.Product.Varna.Shared
   , Nauva.Product.Varna.Catalog
   , Nauva.Product.Varna.Element.Card

  build-depends:
     base >= 4.7 && < 5
   , aeson
   , text
   , nauva
   , nauva-catalog
