name:                nauva-product-nauva-book-static
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nauva-product-nauva-book-static
  default-language:    Haskell2010
  main-is:             Main.hs

  ghc-options:         -Wall -Wno-type-defaults

  build-depends:
      base >= 4.7 && < 5
    , nauva
    , nauva-css
    , nauva-catalog
    , nauva-product-nauva-shared
    , stm
    , blaze-markup
    , aeson
    , directory
    , filepath
    , text
    , blaze-html
