name:                nauva-product-nauva-catalog-dev
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10


executable nauva-product-nauva-catalog-dev
  default-language:    Haskell2010
  main-is:             Main.hs

  ghc-options:         -Wall -Wno-type-defaults

  build-depends:
     base >= 4.7 && < 5
   , nauva-product-nauva-shared
   , nauva-catalog
   , nauva-dev-server
