name:                nauva-product-playground-app-native
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable nauva-product-playground-app-native
  default-language:    Haskell2010
  main-is:             src/Main.hs

  build-depends:
      base >= 4.7 && < 5
    , nauva
    , ghcjs-base
    , blaze-html
    , nauva-native
    , nauva-product-playground-shared
