name:                nauva-product-varna-app-dev
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10


executable nauva-product-varna-app-dev
  default-language:    Haskell2010
  main-is:             src/Main.hs

  ghc-options:         -Wall -Wno-type-defaults

  build-depends:
     base >= 4.7 && < 5
   , nauva-product-varna-shared
   , blaze-html
   , nauva-dev-server
