name:                nauva-product-varna-catalog-native
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10


executable nauva-product-varna-catalog-native
  default-language:    Haskell2010
  main-is:             src/Main.hs

  ghc-options:         -Wall -Wno-type-defaults

  build-depends:
      base >= 4.7 && < 5
    , ghcjs-base
    , nauva
    , nauva-native
    , nauva-catalog
    , nauva-product-varna-shared
